# agricool-backend

./: .gitattributes  .gitignore  .gitlab-ci.yml  BASE_API_DOCUMENTATION.md  DASHBOARD_AND_REPORTING_DOCUMENTATION.md  LICENSE  README.md  SYSTEM_DOCUMENTATION.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json
Impact-Dashboard-Backend/: .editorconfig  .pre-commit-config.yaml  DataSlicer.py  Dockerfile  Dockerfile.scheduler  INTEGRATION-GUIDE.md  Makefile  README.md  compute_co2.py  create_view.py  dataProcessor.py  docker-compose.yaml  heat_capacity.ini  indicator_reporter.py  init_tables.py  main.py  pyproject.toml  queries_data.json  requirements.txt  utils.py
Impact-Dashboard-Backend/LCA/: LCA.py  co2_reporter.py  requirements.txt
Impact-Dashboard-Backend/cron/: crontab  daily-at-midnight.sh  impact-metrics.sh  test.sh  testEnvVars.sh
Impact-Dashboard-Backend/fastAPI/: index.html
Impact-Dashboard-Backend/impact_queries/: impact_metrics_room.sql
Impact-Dashboard-Backend/schema/: init_tables.sql
Impact-Dashboard-Backend/sql_queries/: active_users.sql  checkin_crop_distribution.sql  checkout_crop_distribution.sql  company.sql  cooling_unit.sql  cooling_unit_revenue.sql  crate_movements_day.sql  crates_in.sql  crates_movement.sql  crates_out.sql  init_tables.sql  occupancy_company.sql  occupancy_room.sql
Impact-Dashboard-Backend/tests/: test_app.py  test_compute_co2.py  test_data_slicer_interfaces.py
Impact-Dashboard-Backend/views/: analytics_crate_movements.sql  (+1 more)
(+553 files in other folders)
